<resources>

    <!--    profile activity-->
    <string name="app_name" translatable="false">3L_YR</string>
    <string name="name">Yurii Romanenko</string>
    <string name="position">Android Developer</string>
    <string name="my_address">Ukraine, Kiyv 04216</string>
    <string name="address">Address</string>
    <string name="settings">Settings</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="register">REGISTER</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="photo_profile">photo profile</string>

    <!--  Auth activity-->
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="register_you_agree_terms">By clicking Register you agree to our Terms and Conditions</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="errorPass">pass must create word \"love\"</string>
    <string name="or">or</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password">Password</string>
    <string name="example_email">For example: tom.kruz@mail.com</string>
    <string name="email">Email</string>
    <string name="let_s_get_acquainted">Let\'s get acquainted</string>
    <string name="email_not_valid">email not valid</string>
    <string name="password_must_contain">Password must contain Digit Mixed Case length 6 char</string>
    <string name="log_out">Log out</string>
    <string name="add_contacts">add contacts</string>
    <string name="back">back</string>
    <string name="contacts">Contacts</string>
    <string name="contact_deleted">The contact has been deleted</string>
    <string name="undo">UNDO</string>
    <string name="user_name">Username</string>
    <string name="add_contact">add contact</string>
    <string name="profile_photo">profile photo</string>
    <string name="save">save</string>
    <string name="career">Career</string>
    <string name="add_photo">add photo</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="google" translatable="false">GOOGLE</string>
    <string name="name_user" translatable="false">Firstname Lastname</string>
    <string name="career_user" translatable="false">Android Developer</string>
    <string name="profile_detail_view">Profile</string>
    <string name="contact_name">Contact name</string>
    <string name="message">" Message"</string>
    <string name="add_my_contacts">add to my contacts</string>
</resources>