<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:startIconDrawable="@drawable/baseline_mail_outline_24"
        app:errorEnabled="true"
        app:helperText="@string/example_email"
        app:layout_constraintBottom_toTopOf="@id/textInputPasswordLayout"
        app:layout_constraintEnd_toEndOf="@id/textInputPasswordLayout"
        app:layout_constraintStart_toStartOf="@id/textInputPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/fill_out_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size_position" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:errorEnabled="true"
        app:helperText="@string/password"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/checkBox_remember_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEditPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_size_position"

            tools:ignore="DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginBottom="8dp"
        android:background="@drawable/yr_white_button"
        android:padding="@dimen/padding"
        android:text="GOOGLE"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_position"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_remember_me"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginBottom="8dp"
        android:background="@drawable/yr_dark_button"
        android:padding="@dimen/padding"
        android:text="@string/register"
        android:textSize="@dimen/text_size_position"
        app:layout_constraintBottom_toBottomOf="@id/register_you_agree_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_google" />

    <TextView
        android:id="@+id/register_you_agree_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/register_you_agree_terms"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/Already_have_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register" />

    <CheckBox
        android:id="@+id/checkBox_remember_me"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/remember_me"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/textInputPasswordLayout"
        app:layout_constraintStart_toStartOf="@id/textInputPasswordLayout"
        app:layout_constraintTop_toBottomOf="@id/textInputPasswordLayout"
        app:layout_constraintBottom_toTopOf="@id/button_google"
        />

    <TextView
        android:id="@+id/Lets_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginStart="@dimen/padding"
        android:text="@string/let_s_get_acquainted"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fill_out_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding"
        android:layout_marginStart="@dimen/padding"
        android:text="@string/fill_out_the_profile_and_go_to_the_application"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lets_get" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/or"
        app:layout_constraintBottom_toTopOf="@+id/button_register"
        app:layout_constraintEnd_toEndOf="@+id/button_google"
        app:layout_constraintStart_toStartOf="@+id/button_google"
        app:layout_constraintTop_toBottomOf="@+id/button_google" />

    <TextView
        android:id="@+id/Already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_22dp"
        android:layout_marginBottom="@dimen/_22dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/SignIn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/Already_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Already_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>